--- a/src/Gemfile
+++ b/src/Gemfile
@@ -36,6 +36,13 @@ gem 'jbuilder', '~> 2.5'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
+# Use twitter bootstrap for rails 5
+gem 'bootstrap', '~> 4.4.1'
+gem 'jquery-rails'
+
+#Use robocop 
+gem 'rubocop', '~> 0.80.1', require: false
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
@@ -57,7 +64,8 @@ group :test do
   gem 'capybara', '>= 2.15'
   gem 'selenium-webdriver'
   # Easy installation and use of chromedriver to run system tests with Chrome
-  gem 'chromedriver-helper'
+  # gem 'webdrivers', '~> 4.0'
+  # gem 'chromedriver-helper'
 end
 
 group :production do
