--- a/src/Gemfile
+++ b/src/Gemfile
@@ -48,6 +48,7 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   # Use rspec-rails
   gem 'rspec-rails', '~> 4.0.0.beta'
+  gem "factory_bot_rails"
 end
 
 group :development do
