--- a/src/Gemfile
+++ b/src/Gemfile
@@ -40,8 +40,11 @@ gem 'bootsnap', '>= 1.1.0', require: false
 gem 'bootstrap', '~> 4.4.1'
 gem 'jquery-rails'
 
-#Use robocop 
+# Use robocop 
 gem 'rubocop', '~> 0.80.1', require: false
+
+# User hash function toward password
+gem 'bcrypt', '3.1.12'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
