--- a/src/Gemfile
+++ b/src/Gemfile
@@ -49,6 +49,7 @@ gem 'bcrypt', '3.1.12'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'pry-byebug'
   # Use rspec-rails
   gem 'rspec-rails', '~> 4.0.0.beta'
   gem "factory_bot_rails"
