--- a/src/Gemfile
+++ b/src/Gemfile
@@ -43,8 +43,11 @@ gem 'jquery-rails'
 # Use robocop 
 gem 'rubocop', '~> 0.80.1', require: false
 
-# User hash function toward password
+# Use hash function toward password
 gem 'bcrypt', '3.1.12'
+
+# Use pagination fucntion
+gem 'kaminari'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -62,6 +65,7 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+  # Cretate user datas  
 end
 
 group :test do
