--- a/src/Gemfile
+++ b/src/Gemfile
@@ -40,6 +40,10 @@ gem 'bootsnap', '>= 1.1.0', require: false
 gem 'bootstrap', '~> 4.4.1'
 gem 'jquery-rails'
 
+# User the function of drag and drop sorting
+gem 'jquery-ui-rails'
+gem 'rails_sortable'
+
 # Use robocop 
 gem 'rubocop', '~> 0.80.1', require: false
 
